deploy/opa/virtual-service.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: zadig
  namespace: gloo
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          kube:
            ref:
              name: test
              namespace: loutest-go-sample-site
            port: 8080
    options:
      extauth:
        customAuth: {}
